// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Desktop Render Model Snapshots > altGr layer — Yoruba 1`] = `
{
  "rows": [
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-a",
          "overrideLabel": undefined,
          "primaryLabel": "@",
          "secondaryLabel": "a",
          "tabStop": true,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-e",
          "overrideLabel": undefined,
          "primaryLabel": "€",
          "secondaryLabel": "e",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-o",
          "overrideLabel": undefined,
          "primaryLabel": "",
          "secondaryLabel": "o",
          "tabStop": false,
          "width": 1,
        },
      ],
    },
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-shift",
          "overrideLabel": "⇧",
          "primaryLabel": "⇧",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-n",
          "overrideLabel": undefined,
          "primaryLabel": "",
          "secondaryLabel": "n",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-enter",
          "overrideLabel": "⏎",
          "primaryLabel": "⏎",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
      ],
    },
  ],
}
`;

exports[`Desktop Render Model Snapshots > base layer — Yoruba 1`] = `
{
  "rows": [
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-a",
          "overrideLabel": undefined,
          "primaryLabel": "a",
          "secondaryLabel": "A",
          "tabStop": true,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-e",
          "overrideLabel": undefined,
          "primaryLabel": "e",
          "secondaryLabel": "E",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-o",
          "overrideLabel": undefined,
          "primaryLabel": "o",
          "secondaryLabel": "O",
          "tabStop": false,
          "width": 1,
        },
      ],
    },
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-shift",
          "overrideLabel": "⇧",
          "primaryLabel": "⇧",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-n",
          "overrideLabel": undefined,
          "primaryLabel": "n",
          "secondaryLabel": "N",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-enter",
          "overrideLabel": "⏎",
          "primaryLabel": "⏎",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
      ],
    },
  ],
}
`;

exports[`Desktop Render Model Snapshots > shift layer — Yoruba 1`] = `
{
  "rows": [
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-a",
          "overrideLabel": undefined,
          "primaryLabel": "A",
          "secondaryLabel": "@",
          "tabStop": true,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-e",
          "overrideLabel": undefined,
          "primaryLabel": "E",
          "secondaryLabel": "€",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-o",
          "overrideLabel": undefined,
          "primaryLabel": "O",
          "secondaryLabel": "o",
          "tabStop": false,
          "width": 1,
        },
      ],
    },
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-shift",
          "overrideLabel": "⇧",
          "primaryLabel": "⇧",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-n",
          "overrideLabel": undefined,
          "primaryLabel": "N",
          "secondaryLabel": "n",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-enter",
          "overrideLabel": "⏎",
          "primaryLabel": "⏎",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
      ],
    },
  ],
}
`;

exports[`Desktop Render Model Snapshots > with hidden and disabled keys 1`] = `
{
  "rows": [
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-a",
          "overrideLabel": undefined,
          "primaryLabel": "a",
          "secondaryLabel": "A",
          "tabStop": true,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-e",
          "overrideLabel": undefined,
          "primaryLabel": "e",
          "secondaryLabel": "E",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": true,
          "keyId": "key-o",
          "overrideLabel": undefined,
          "primaryLabel": "o",
          "secondaryLabel": "O",
          "tabStop": false,
          "width": 1,
        },
      ],
    },
    {
      "keys": [
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-shift",
          "overrideLabel": "⇧",
          "primaryLabel": "⇧",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "focused": false,
          "hidden": false,
          "keyId": "key-n",
          "overrideLabel": undefined,
          "primaryLabel": "n",
          "secondaryLabel": "N",
          "tabStop": false,
          "width": 1,
        },
        {
          "active": false,
          "disabled": true,
          "focused": false,
          "hidden": false,
          "keyId": "key-enter",
          "overrideLabel": "⏎",
          "primaryLabel": "⏎",
          "secondaryLabel": "",
          "tabStop": false,
          "width": 1.5,
        },
      ],
    },
  ],
}
`;

exports[`Mobile Render Model Snapshots > base layer — Yoruba 1`] = `
{
  "longPressPopup": null,
  "rows": [
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-a",
          "longPressChars": [
            "à",
            "á",
            "â",
          ],
          "primaryLabel": "a",
          "tabStop": true,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-e",
          "longPressChars": [
            "è",
            "é",
            "ê",
          ],
          "primaryLabel": "e",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-o",
          "longPressChars": [],
          "primaryLabel": "o",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
      ],
    },
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-shift",
          "longPressChars": [],
          "primaryLabel": "⇧",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-n",
          "longPressChars": [],
          "primaryLabel": "n",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-enter",
          "longPressChars": [],
          "primaryLabel": "⏎",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
      ],
    },
  ],
  "widthBucket": "md",
}
`;

exports[`Mobile Render Model Snapshots > with long-press popup 1`] = `
{
  "longPressPopup": {
    "anchorKeyId": "key-a",
    "items": [
      "à",
      "á",
      "â",
    ],
    "selectedIndex": 1,
  },
  "rows": [
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-a",
          "longPressChars": [
            "à",
            "á",
            "â",
          ],
          "primaryLabel": "a",
          "tabStop": true,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-e",
          "longPressChars": [
            "è",
            "é",
            "ê",
          ],
          "primaryLabel": "e",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-o",
          "longPressChars": [],
          "primaryLabel": "o",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
      ],
    },
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-shift",
          "longPressChars": [],
          "primaryLabel": "⇧",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-n",
          "longPressChars": [],
          "primaryLabel": "n",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-enter",
          "longPressChars": [],
          "primaryLabel": "⏎",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
      ],
    },
  ],
  "widthBucket": "md",
}
`;

exports[`Mobile Render Model Snapshots > xs width bucket 1`] = `
{
  "longPressPopup": null,
  "rows": [
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-a",
          "longPressChars": [
            "à",
            "á",
            "â",
          ],
          "primaryLabel": "a",
          "tabStop": true,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": true,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-e",
          "longPressChars": [
            "è",
            "é",
            "ê",
          ],
          "primaryLabel": "e",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-o",
          "longPressChars": [],
          "primaryLabel": "o",
          "tabStop": false,
          "thumbComfort": "low",
          "width": 1,
        },
      ],
    },
    {
      "height": 52,
      "keys": [
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-shift",
          "longPressChars": [],
          "primaryLabel": "⇧",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": false,
          "keyId": "key-n",
          "longPressChars": [],
          "primaryLabel": "n",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1,
        },
        {
          "active": false,
          "disabled": false,
          "hasLongPress": false,
          "hidden": false,
          "isActionKey": true,
          "keyId": "key-enter",
          "longPressChars": [],
          "primaryLabel": "⏎",
          "tabStop": false,
          "thumbComfort": "medium",
          "width": 1.5,
        },
      ],
    },
  ],
  "widthBucket": "xs",
}
`;
